--- a/HTML-CSS/Exercize/d008/pagina_vermeia.html
+++ b/HTML-CSS/Exercize/d008/pagina_vermeia.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: crimson;">
     <h1>Pagina vermeia</h1>
-    <p>slk vermeio at[e dms, pare</p>
+    <p>slk vermeio até dms, pare</p>
     <p>agora <a href="index.html">volte</a></p>
 </body>
 </html>
