--- a/HTML-CSS/Exercize/exer005_listas/index.html
+++ b/HTML-CSS/Exercize/exer005_listas/index.html
@@ -22,7 +22,7 @@
     <ul>
         <li>Lugar X</li>
         <li>Lugar Y</li>
-        <li>Casa do caralho</li>
+        <li>lugarrrrr 🏴‍☠️</li>
     </ul>
 
     <h2>Melhores melee</h2>
