--- a/HTML-CSS/Exercize/exer009_classes_CSS/index.html
+++ b/HTML-CSS/Exercize/exer009_classes_CSS/index.html
@@ -15,9 +15,15 @@
         <li class="fruta">Abacate</li>
     </ul>
 
-
+    <ul id="lista_fruta">
+        <li>Maça</li>
+        <li>Brocolis</li>
+        <li>Cactus</li>
+    </ul>
    
+    <input type="text" placeholder="Lorenzinho basico">
 
-    
+    <a href="youtube.com.br" type="external">Youtubes</a>
+    <a href="google.com">Gulugulu</a>
 </body>
 </html>
