modified:   HTML-CSS/Exercize/exer010_textos_CSS/index.html 	modified:   HTML-CSS/Exercize/exer010_textos_CSS/style.CSS

--- a/HTML-CSS/Exercize/exer010_textos_CSS/index.html
+++ b/HTML-CSS/Exercize/exer010_textos_CSS/index.html
@@ -12,7 +12,7 @@
             <h1>Vou colocar dos tipos de textos</h1>
         </section>
     </header>
-    <main>
+    <main class="content-main">
         <section>
             <p class="peso">Para conseguir diferenciar e notar as diferenças</p>
             <p>com mais destaque</p>
